# tbg-wav2mov

./: .gitignore  LICENSE-MIT.md  README.md  conf.py  config.toml  pyproject.toml
examples/: basic.py
examples/src/: basic.py
libs/wav2mov/: __init__.py  wav2mov.py
libs/wav2mov/core/: __init__.py
src/: __init__.py  wav2mov.py
src/core/: __init__.py
src/tbg-wav2mov/: __about__.py
typings/numpy/: __config__.pyi  __init__.pyi  conftest.pyi  dtypes.pyi  version.pyi
typings/numpy/_core/: arrayprint.pyi  defchararray.pyi  fromnumeric.pyi  multiarray.pyi  numeric.pyi  numerictypes.pyi  records.pyi  shape_base.pyi
typings/numpy/_typing/: __init__.pyi  _array_like.pyi  _callable.pyi  _char_codes.pyi  _dtype_like.pyi  _scalars.pyi  _ufunc.pyi
typings/numpy/compat/: py3k.pyi
typings/numpy/lib/: __init__.pyi  _array_utils_impl.pyi  _arraysetops_impl.pyi  _arrayterator_impl.pyi  _function_base_impl.pyi  _histograms_impl.pyi  _index_tricks_impl.pyi  _npyio_impl.pyi  _polynomial_impl.pyi  _shape_base_impl.pyi  _stride_tricks_impl.pyi  _twodim_base_impl.pyi  _type_check_impl.pyi  _ufunclike_impl.pyi  _utils_impl.pyi  mixins.pyi
typings/numpy/linalg/: _linalg.pyi
typings/numpy/ma/: core.pyi
typings/numpy/polynomial/: __init__.pyi  chebyshev.pyi  hermite.pyi  hermite_e.pyi  laguerre.pyi  legendre.pyi  polynomial.pyi  polyutils.pyi
typings/numpy/testing/_private/: utils.pyi
wav2mov/: lib.py  wav2mov.py
wav2mov/core/: __init__.py  core.py
wav2mov/core/audio/: __init__.py  audio.py
wav2mov/core/movies/: __init__.py  movie.py
