[tool.poetry]
name = "wav2mov"
version = "0.1.0"
description = "A python library to convert wav files to mov files. Used in The Bracers Guild Podcast software tooling systems."
authors = ["Alexander Williams-Letondre <al.willet02@gmail.com>"]
license = "MIT OR Apache-2.0"
packages = [{include = "src"}, {include = "src/py.typed"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
numpy = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.10.1"
pyright = "^1.1.239"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.pylint."messages control"]
disable = "all"
enable = [
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line-length = 120

[tool.pyright]
include = [
    "src"
]

exclude = [
    "**/node_modules",
    "**/__pycache__",
]

typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
